--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -64,6 +64,16 @@ jobs:
         with:
           go-version: 1.20.14
 
+      - name: Install xcbeautify
+        run: |
+          brew update
+          brew install xcbeautify
+
+      - name: Install protobuf
+        run: |
+          brew update
+          brew install protobuf
+
       - name: Set up yeetd to workaround XCode being slow in CI
         run: |
           wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
@@ -74,7 +84,15 @@ jobs:
         with:
           xcode-version: '15.0.1'
       - name: Configure Rust
+        # Since the https://github.com/actions/runner-images/releases/tag/macos-13-arm64%2F20240721.1 release
+        # Brew does not install tools at the correct location anymore
+        # This update broke the rust build script which was assuming the cargo binary was located in ~/.cargo/bin/cargo
+        # The workaround is to fix brew paths by running brew bundle dump, and then brew bundle
+        # WARNING: This has to be the last brew "upgrade" commands that is ran,
+        # otherwise the brew path will be broken again.
         run: |
+          brew bundle dump
+          brew bundle
           rustup default stable
           rustup update stable
           rustup target add aarch64-apple-ios-sim
@@ -87,16 +105,6 @@ jobs:
           cp Screenshots.xcconfig.template Screenshots.xcconfig
           cp Api.xcconfig.template Api.xcconfig
         working-directory: ios/Configurations
-
-      - name: Install xcbeautify
-        run: |
-          brew update
-          brew install xcbeautify
-
-      - name: Install protobuf
-        run: |
-          brew update
-          brew install protobuf
 
       - name: Run unit tests
         run: |
