Configure which CI jobs should be triggered by osv-scanner.toml changes

--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -17,6 +17,7 @@ on:
       - '!scripts/**'
       - '!windows/**'
       - '!**/**.md'
+      - '!**/osv-scanner.toml'
   schedule:
     # At 06:20 UTC every day.
     # Notifications for scheduled workflows are sent to the user who last modified the cron
