--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -8,6 +8,7 @@ on:
       - android/lib/resource/src/**/plurals.xml
       - android/lib/resource/src/**/strings.xml
       - gui/**
+      - '!**/osv-scanner.toml'
   workflow_dispatch:
 jobs:
   check-translations:
