--- a/test/test-manager/Cargo.toml
+++ b/test/test-manager/Cargo.toml
@@ -59,7 +59,7 @@ talpid-types = { path = "../../talpid-types" }
 
 ssh2 = "0.9.4"
 
-nix = { version = "0.26", features = ["net"] }
+nix = { workspace = true }
 socket2 = "0.5.6"
 
 [target.'cfg(target_os = "macos")'.dependencies]
