--- a/test/test-manager/Cargo.toml
+++ b/test/test-manager/Cargo.toml
@@ -40,7 +40,8 @@ tokio-serde = { workspace = true }
 log = { workspace = true }
 
 pcap = { version = "1.3", features = ["capture-stream"] }
-pnet_packet = "0.31.0"
+pnet_packet = "0.34.0"
+pnet_base = "0.34.0"
 
 test-rpc = { path = "../test-rpc" }
 socks-server = { path = "../socks-server" }
