Upgrade pfctl to 0.5.0 and ipnetwork to 0.20

--- a/mullvad-jni/Cargo.toml
+++ b/mullvad-jni/Cargo.toml
@@ -22,7 +22,7 @@ tokio = { workspace = true, features = ["rt"] }
 
 thiserror = { workspace = true }
 futures = "0.3"
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 jnix = { version = "0.5.1", features = ["derive"] }
 log = { workspace = true }
 log-panics = "2"
