--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,8 @@ chrono = { version = "0.4.26", default-features = false }
 clap = { version = "4.4.18", features = ["cargo", "derive"] }
 once_cell = "1.13"
 
+ipnetwork = "0.20"
+
 # Test dependencies
 proptest = "1.4"
 
