--- a/mullvad-api/Cargo.toml
+++ b/mullvad-api/Cargo.toml
@@ -21,7 +21,7 @@ thiserror = { workspace = true }
 futures = "0.3"
 http = "0.2"
 hyper = { version = "0.14", features = ["client", "stream", "http1", "tcp" ] }
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 log = { workspace = true }
 serde = "1"
 serde_json = "1.0"
