--- a/mullvad-types/Cargo.toml
+++ b/mullvad-types/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 chrono = { workspace = true, features = ["clock", "serde"] }
 thiserror = { workspace = true }
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 once_cell = { workspace = true }
 log = { workspace = true }
 regex = "1"
