--- a/talpid-routing/Cargo.toml
+++ b/talpid-routing/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 thiserror = { workspace = true }
 futures = "0.3.15"
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["process", "rt-multi-thread", "net", "io-util", "time"] }
 
