--- a/talpid-tunnel/Cargo.toml
+++ b/talpid-tunnel/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 thiserror = { workspace = true }
 cfg-if = "1.0"
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 talpid-routing = { path = "../talpid-routing" }
 talpid-types = { path = "../talpid-types" }
 futures = "0.3.15"
