--- a/talpid-wireguard/Cargo.toml
+++ b/talpid-wireguard/Cargo.toml
@@ -14,7 +14,7 @@ workspace = true
 thiserror = { workspace = true }
 futures = "0.3.15"
 hex = "0.4"
-ipnetwork = "0.16"
+ipnetwork = { workspace = true }
 once_cell = { workspace = true }
 libc = "0.2.150"
 log = { workspace = true }
