Run screenshot tests when ruby deps change
Signed-off-by: Emīls <emils@mullvad.net>

--- a/.github/workflows/ios-screenshots-creation.yml
+++ b/.github/workflows/ios-screenshots-creation.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - ios/*
+  pull_request:
+    paths:
+      - ios/Gemfile
+      - ios/Gemfile.lock
   workflow_dispatch:
 jobs:
   test:
