Exclude heavy compile CI jobs on changes to CODEOWNERS

--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -6,6 +6,7 @@ on:
       - '**'
       - '!.github/workflows/**'
       - '.github/workflows/android-app.yml'
+      - '!.github/CODEOWNERS'
       - '!audits/**'
       - '!ci/**'
       - '!dist-assets/**'
