--- a/.github/workflows/daemon.yml
+++ b/.github/workflows/daemon.yml
@@ -7,6 +7,7 @@ on:
       - '!**/**.md'
       - '!.github/workflows/**'
       - '.github/workflows/daemon.yml'
+      - '!.github/CODEOWNERS'
       - '!android/**'
       - '!audits/**'
       - '!build-apk.sh'
