--- a/.github/workflows/desktop-e2e.yml
+++ b/.github/workflows/desktop-e2e.yml
@@ -126,7 +126,10 @@ jobs:
   e2e-test-linux:
     name: Linux end-to-end tests
     needs: [prepare-matrices, build-linux]
-    if: '!cancelled()'
+    if: |
+      !cancelled() &&
+      needs.prepare-matrices.outputs.linux_matrix != '[]' &&
+      needs.prepare-matrices.outputs.linux_matrix != ''
     runs-on: [self-hosted, desktop-test, Linux] # app-test-linux
     timeout-minutes: 240
     strategy:
@@ -196,7 +199,10 @@ jobs:
 
   e2e-test-windows:
     needs: [prepare-matrices, build-windows]
-    if: '!cancelled()'
+    if: |
+      !cancelled() &&
+      needs.prepare-matrices.outputs.windows_matrix != '[]' &&
+      needs.prepare-matrices.outputs.windows_matrix != ''
     name: Windows end-to-end tests
     runs-on: [self-hosted, desktop-test, Linux] # app-test-linux
     timeout-minutes: 240
@@ -263,7 +269,10 @@ jobs:
 
   e2e-test-macos:
     needs: [prepare-matrices, build-macos]
-    if: '!cancelled()'
+    if: |
+      !cancelled() &&
+      needs.prepare-matrices.outputs.macos_matrix != '[]' &&
+      needs.prepare-matrices.outputs.macos_matrix != ''
     name: macOS end-to-end tests
     runs-on: [self-hosted, desktop-test, macOS] # app-test-macos-arm
     timeout-minutes: 240
