Limit permissions on yamllint CI job

--- a/.github/workflows/unicode-check.yml
+++ b/.github/workflows/unicode-check.yml
@@ -1,6 +1,9 @@
 ---
 name: Bidirectional Unicode scan
 on: [pull_request, workflow_dispatch]
+
+permissions: {}
+
 jobs:
   build-linux:
     runs-on: ubuntu-latest
