--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -66,10 +66,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
 
-      # Do not use the github actions to install go, it will not install the correct version
       - name: Setup go-lang
-        run: |
-          brew install go@1.20
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.14
 
       - name: Install xcbeautify
         run: |
