--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,27 +8,36 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <!-- https://developer.android.com/guide/components/fg-service-types#system-exempted -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
-    <uses-feature android:name="android.hardware.touchscreen"
-                  android:required="false" />
-    <uses-feature android:name="android.hardware.faketouch"
-                  android:required="false" />
-    <uses-feature android:name="android.hardware.screen.portrait"
-                  android:required="false" />
-    <uses-feature android:name="android.hardware.screen.landscape"
-                  android:required="false" />
-    <uses-feature android:name="android.software.leanback"
-                  android:required="false" />
-    <uses-feature android:glEsVersion="0x00020000"
-                  android:required="false" />
-    <application android:name=".MullvadApplication"
-                 android:allowBackup="false"
-                 android:banner="@drawable/banner"
-                 android:extractNativeLibs="true"
-                 android:icon="@mipmap/ic_launcher"
-                 android:label="@string/app_name"
-                 android:roundIcon="@mipmap/ic_launcher"
-                 android:theme="@style/Theme.App.Starting"
-                 tools:ignore="GoogleAppIndexingWarning">
+
+    <uses-feature
+            android:name="android.hardware.touchscreen"
+            android:required="false" />
+    <uses-feature
+            android:name="android.hardware.faketouch"
+            android:required="false" />
+    <uses-feature
+            android:name="android.hardware.screen.portrait"
+            android:required="false" />
+    <uses-feature
+            android:name="android.hardware.screen.landscape"
+            android:required="false" />
+    <uses-feature
+            android:name="android.software.leanback"
+            android:required="false" />
+    <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="false" />
+
+    <application
+            android:name=".MullvadApplication"
+            android:allowBackup="false"
+            android:banner="@drawable/banner"
+            android:extractNativeLibs="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher"
+            android:theme="@style/Theme.App.Starting"
+            tools:ignore="GoogleAppIndexingWarning">
         <!--
             MainActivity
             Must be exported in order to be launchable.
@@ -36,16 +46,18 @@
             This can be disregarded when the minimum supported version is 28 or higher
             since after that it has been patched on a OS level.
         -->
-        <activity android:name="net.mullvad.mullvadvpn.ui.MainActivity"
-                  android:configChanges="orientation|screenSize|screenLayout"
-                  android:exported="true"
-                  android:launchMode="singleInstance"
-                  android:screenOrientation="fullUser"
-                  android:windowSoftInputMode="adjustResize"
-                  android:enableOnBackInvokedCallback="true"
-                  tools:ignore="DiscouragedApi,UnusedAttribute">
+        <activity
+                android:name="net.mullvad.mullvadvpn.ui.MainActivity"
+                android:configChanges="orientation|screenSize|screenLayout"
+                android:exported="true"
+                android:launchMode="singleInstance"
+                android:screenOrientation="fullUser"
+                android:windowSoftInputMode="adjustResize"
+                android:enableOnBackInvokedCallback="true"
+                tools:ignore="DiscouragedApi,UnusedAttribute">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
@@ -66,12 +78,13 @@
             foregroundServiceType="systemExempted" is required in Android 14+
             https://developer.android.com/guide/components/fg-service-types#system-exempted
             -->
-        <service android:name="net.mullvad.mullvadvpn.service.MullvadVpnService"
-                 android:exported="true"
-                 android:foregroundServiceType="systemExempted"
-                 android:permission="android.permission.BIND_VPN_SERVICE"
-                 android:stopWithTask="false"
-                 tools:ignore="ForegroundServicePermission">
+        <service
+                android:name="net.mullvad.mullvadvpn.service.MullvadVpnService"
+                android:exported="true"
+                android:foregroundServiceType="systemExempted"
+                android:permission="android.permission.BIND_VPN_SERVICE"
+                android:stopWithTask="false"
+                tools:ignore="ForegroundServicePermission">
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
@@ -90,21 +103,32 @@
             Tile services must be exported and protected by the bind tile permission
             (android.permission.BIND_QUICK_SETTINGS_TILE).
         -->
-        <service android:name="net.mullvad.mullvadvpn.tile.MullvadTileService"
-                 android:exported="true"
-                 android:icon="@drawable/small_logo_black"
-                 android:label="@string/toggle_vpn"
-                 android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+        <service
+                android:name="net.mullvad.mullvadvpn.tile.MullvadTileService"
+                android:exported="true"
+                android:icon="@drawable/small_logo_black"
+                android:label="@string/toggle_vpn"
+                android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
-        <provider android:name="net.mullvad.mullvadvpn.provider.MullvadFileProvider"
-                  android:authorities="${applicationId}.FileProvider"
-                  android:exported="false"
-                  android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                       android:resource="@xml/provider_paths" />
+        <provider
+                android:name="net.mullvad.mullvadvpn.provider.MullvadFileProvider"
+                android:authorities="${applicationId}.FileProvider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/provider_paths" />
         </provider>
+        <receiver
+                android:name=".broadcastreceiver.LocaleChangedBroadcastReceiver"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.LOCALE_CHANGED" />
+            </intent-filter>
+
+        </receiver>
     </application>
 </manifest>
