--- a/.github/actions/run-ios-e2e-tests/action.yml
+++ b/.github/actions/run-ios-e2e-tests/action.yml
@@ -44,17 +44,20 @@ runs:
         TEST_DEVICE_UDID: ${{ inputs.test_device_udid }}
 
     - name: Run end-to-end-tests
-      run: >
-        if [ -n "$TEST_NAME" ]; then TEST_NAME_ARGUMENT=" -only-testing $TEST_NAME"; else TEST_NAME_ARGUMENT=""; fi
-
-        set -o pipefail && env NSUnbufferedIO=YES xcodebuild
-          -project MullvadVPN.xcodeproj
-          -scheme MullvadVPNUITests
-          -testPlan MullvadVPNUITestsAll $TEST_NAME_ARGUMENT
-          -resultBundlePath ${{ env.TEST_OUTPUT_DIRECTORY }}/xcode-test-report
-          -derivedDataPath derived-data
-          -destination "platform=iOS,id=$TEST_DEVICE_UDID"
-          test-without-building 2>&1 | xcbeautify --report junit
+      run: |
+        if [ -n "$TEST_NAME" ]; then
+          TEST_NAME_ARGUMENT=" -only-testing $TEST_NAME"
+        else
+          TEST_NAME_ARGUMENT=""
+        fi
+        set -o pipefail && env NSUnbufferedIO=YES xcodebuild \
+          -project MullvadVPN.xcodeproj \
+          -scheme MullvadVPNUITests \
+          -testPlan MullvadVPNUITestsAll $TEST_NAME_ARGUMENT \
+          -resultBundlePath ${{ env.TEST_OUTPUT_DIRECTORY }}/xcode-test-report \
+          -derivedDataPath derived-data \
+          -destination "platform=iOS,id=$TEST_DEVICE_UDID" \
+          test-without-building 2>&1 | xcbeautify --report junit \
           --report-path ${{ env.TEST_OUTPUT_DIRECTORY }}/junit-test-report
       shell: bash
       working-directory: ${{ inputs.outputs_path }}/mullvadvpn-app/ios
